--- a/static/styles.css
+++ b/static/styles.css
@@ -1,24 +1,40 @@
 body {
-    font-family: 'Helvetica Neue', Arial, sans-serif; /* Clean font */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     text-align: center;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-color: #121212; /* Darker background for better contrast */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+    height: 100vh; /* Full viewport height */
+    background-color: #f1efe7; /* Updated background color */
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column; /* Align items vertically */
+    justify-content: center; /* Center items vertically */
+    align-items: center; /* Center items horizontally */
+}
+
+#logoContainer {
+    width: 100%; /* Full width */
+    display: flex; /* Use flexbox for centering */
+    justify-content: center; /* Center horizontally */
+    margin-bottom: 20px; /* Add some space below the logo */
+}
+
+#logo {
+    width: 100%; /* Fill the width */
+    max-width: 600px; /* Adjust as needed */
+    height: auto; /* Maintain aspect ratio */
 }
 
 #startContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: auto; /* Change height to auto */
+    padding: 20px; /* Add some padding */
 }
 
 #startButton {
+    position: relative; /* Set position to relative to ensure it appears above the background */
+    z-index: 1; /* Ensure the button appears above the background */
     width: 80vw; /* Responsive width */
     max-width: 300px; /* Maximum width */
     height: 80vw; /* Responsive height */
@@ -27,22 +43,22 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #007bff; /* Blue background */
+    background-color: #000; /* Black background for the button */
     cursor: pointer;
-    font-size: 5vw; /* Responsive font size */
-    color: white;
+    font-size: 12.5vw; /* Responsive font size */
+    color: white; /* White text color */
     font-weight: bold;
     transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adding shadow */
 }
 
 #startButton:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #333; /* Darker shade on hover */
     transform: translateY(-2px); /* Lift effect on hover */
 }
 
 #postureContainer {
-    width: 90vw; /* Responsive width */
+    width: 92vw; /* Responsive width */
     max-width: 600px; /* Maximum width */
     height: 420px; /* Fixed height */
     padding: 20px;
@@ -62,11 +78,11 @@ body {
 }
 
 #stopContainer {
-    width: 100%; /* Fill the width */
+    width: 100vw; /* Fill the entire width of the viewport */
 }
 
 #stopButton {
-    width: 100%; /* Fill the width of the container */
+    width: 101vw; /* Fill the width of the stopContainer */
     height: 60px; /* Desired height */
     background-color: #ff4d4d; /* Red background for stop button */
     color: white; /* Text color */
@@ -75,10 +91,10 @@ body {
     border: none; /* No border */
     cursor: pointer; /* Pointer cursor on hover */
     text-align: center; /* Center the text */
-    padding: 0; /* Remove padding */
     margin: 0; /* Remove margin */
+    padding: 0; /* Remove padding */
     transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adding shadow */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Adding shadow */
 }
 
 #stopButton:hover {
@@ -90,17 +106,16 @@ body {
     font-size: 36px; /* Increase font size for timer */
     margin-top: 20px;
     font-weight: 500; /* Slightly bolder font weight */
-    color: orange; /* Orange color for timer */
+    color: black; /* Orange color for timer */
 }
 
 h1 {
     font-size: 30px; /* Set h1 font size */
-    color: white; /* White text color for headings */
+    color: black; /* Black text color for headings */
     margin-bottom: 10px; /* Spacing below heading */
 }
 
 p {
     font-size: 18px; /* Set paragraph font size */
-    color: #ccc; /* Lighter text color for paragraphs */
+    color: #333; /* Darker text color for paragraphs */
 }
-x
