--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+    <div id="logoContainer">
+        <img src="../images/backpak.png" alt="Logo" id="logo"> <!-- Adjust the path to your logo image -->
+    </div>
     <div id="startContainer">
         <div id="startButton">
             <span>Start</span>
