--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posture Detection</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+    <div id="logoContainer">
+        <img src="../images/backpak.png" alt="Logo" id="logo"> <!-- Adjust the path to your logo image -->
+    </div>
     <div id="startContainer">
-        <button id="startButton">Start Posture Detection</button>
+        <div id="startButton">
+            <span>Start</span>
+        </div>
     </div>
     <div id="postureContainer" style="display: none;">
-        <h1 id="postureTitle">Posture Detection</h1>
-        <p id="postureMessage">Monitoring your posture...</p>
+        <h1 id="postureMessage">Monitoring your posture...</h1>
     </div>
+    <div id="stopContainer" style="display: none;">
+        <button id="stopButton">Stop Monitoring</button>
+    </div>
+    <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div>
 
-    <script src="script.js"></script>
+    <script src="../static/script.js"></script>
 </body>
 </html>
