--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posture Detection</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="">
 </head>
+
 <body>
     <div id="logoContainer">
-        <img src="../images/backpak.png" alt="Logo" id="logo"> <!-- Adjust the path to your logo image -->
+        <img src="{{ url_for('static/images', filename='backpak.png') }}" alt="Logo" id="logo"> <!-- Adjust the path to your logo image -->
     </div>
+    
     <div id="startContainer">
         <div id="startButton">
             <span>Start</span>
         </div>
     </div>
+    
     <div id="postureContainer" style="display: none;">
         <h1 id="postureMessage">Monitoring your posture...</h1>
     </div>
+    
     <div id="stopContainer" style="display: none;">
         <button id="stopButton">Stop Monitoring</button>
     </div>
-    <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div>
+    
+    <!--<div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div>-->
 
-    <script src="../static/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
