--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posture Detection</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div id="logoContainer">
-        <img src="../images/backpak.png" alt="Logo" id="logo"> <!-- Adjust the path to your logo image -->
+        <!--<img src="{{ url_for('static', filename='images/backpak.png') }}" alt="Logo" id="logo"> -->
     </div>
     <div id="startContainer">
         <div id="startButton">
@@ -23,6 +23,6 @@
     </div>
     <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div>
 
-    <script src="../static/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
