--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="logoContainer">
-        <!--<img src="{{ url_for('static', filename='images/backpak.png') }}" alt="Logo" id="logo"> -->
+        <img src="{{ url_for('static', filename='images/backpak.png') }}" alt="Logo" id="logo">
     </div>
     <div id="startContainer">
         <div id="startButton">
@@ -21,7 +21,8 @@
     <div id="stopContainer" style="display: none;">
         <button id="stopButton">Stop Monitoring</button>
     </div>
-    <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div>
+    <!-- Commented out the timer display -->
+    <!-- <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div> -->
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
