--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posture Detection</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <audio id="alertSound" src="..\src\static\sounds\sound.mp3" preload="auto"></audio>
 </head>
 <body>
     <div id="logoContainer">
