--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posture Detection</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <audio id="alertSound" src="..\src\static\sounds\sound.mp3" preload="auto"></audio>
+    <audio id="alertSound" src="{{ url_for('static', filename='sounds/sound.mp3') }}" preload="auto"></audio>
 </head>
 <body>
     <div id="logoContainer">
@@ -22,8 +22,6 @@
     <div id="stopContainer" style="display: none;">
         <button id="stopButton">Stop Monitoring</button>
     </div>
-    <!-- Commented out the timer display -->
-    <!-- <div id="timer" style="font-size: 24px; margin-top: 20px; display: none;">Time: 0s</div> -->
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
